Rossum SA ext: improve select options widths

--- a/src/rossum-sa-extension/popup/popup.html
+++ b/src/rossum-sa-extension/popup/popup.html
@@ -17,6 +17,9 @@
         <span>Enable schema ID annotations</span>
       </label>
     </div>
+
+    <div class="info">0.2.2</div>
+
     <script src="popup.js"></script>
   </body>
 </html>
