Rossum SA ext: sort select options alphabetically

--- a/src/rossum-sa-extension/popup/popup.html
+++ b/src/rossum-sa-extension/popup/popup.html
@@ -16,9 +16,14 @@
         <input type="checkbox" id="schemaAnnotationsEnabled" />
         <span>Enable schema ID annotations</span>
       </label>
+
+      <label>
+        <input type="checkbox" checked="checked" disabled="disabled" />
+        <span>Enable UI improvements</span>
+      </label>
     </div>
 
-    <div class="info">0.2.2</div>
+    <div class="info">0.3.0</div>
 
     <script src="popup.js"></script>
   </body>
